# avedac

./: .hgignore  INSTALL.md  README  README.md  README.txt  build  build.sh  nbactions-Linux.xml  nbactions-Mac.xml  nbactions.xml  pom.xml  release  release.properties  release.sh  setup
assembly/: assembly.xml
aved-classifier/: README  README.txt  build  build.sh  environment.plist  nbactions-Mac.xml  nbactions-Mac64.xml  nbactions.xml  pom.xml  release.properties  setup  setup.sh
aved-classifier/narmojo/: pom.xml
aved-classifier/sharedlib/: README.txt  build  nbactions-Linux.xml  nbactions.xml  pom.xml  pom.xml.org
aved-classifier/sharedlibjni/: README  README.txt  build  nbactions-Linux.xml  nbactions-Mac.xml  nbactions-Mac64.xml  nbactions.xml  pom.xml
aved-mbarivision/: .classpath  .project  pom.xml
aved-mbarivision-api/: nbactions-Mac64.xml  nbactions.xml  pom.xml
aved-mbarivision/src/: .project
aved-mbarivision/src/main/cpp/: Makefile  Makefile.in  Mbarivision.C  cdeps.cc  config.status  configure  configure.ac  depoptions-all
aved-mbarivision/src/main/cpp/Data/: MbariMetaData.C  MbariMetaData.H  MbariOpts.C  MbariOpts.H
aved-mbarivision/src/main/cpp/DetectionAndTracking/: BitObject.C  BitObject.H  BitObjectDrawModes.C  BitObjectDrawModes.H  DetectionParameters.C  DetectionParameters.H  FOEestimator.C  FOEestimator.H  Geometry2D.C  Geometry2D.H  MbariFunctions.C  MbariFunctions.H  MbariImageCache.H  MbariVisualEvent.C  MbariVisualEvent.H  SaliencyTypes.C  SaliencyTypes.H  SegmentTypes.C  SegmentTypes.H  Segmentation.C  Segmentation.H  TrackingModes.C  TrackingModes.H
aved-mbarivision/src/main/cpp/DetectionAndTracking/segment/: convolve.h  filter.h  image.h  imconv.h  pnmfile.h  segment
aved-mbarivision/src/main/cpp/Image/: BitObject.C  BitObject.H  BitObjectDrawModes.C  BitObjectDrawModes.H  Geometry2D.C  Geometry2D.H  MbariImage.H  MbariImageCache.H
aved-mbarivision/src/main/cpp/Media/: MbariResultViewer.C  MbariResultViewer.H
aved-mbarivision/src/main/cpp/Utils/: ErrReporter.C  ErrReporter.H  MbariXMLParser.C  MbariXMLParser.H  Version.C  Version.H
aved-mbarivision/src/main/cpp/autom4te.cache/: output.0  traces.0
aved-mbarivision/src/main/cpp/inst/Image/: FilterOps.I
aved-mbarivision/src/main/cpp/schema/: EventDetectionParameters.xsd
aved-mbarivision/src/main/cpp/schema/CVS/: Entries  Repository  Root
aved-mbarivision/src/main/cpp/src/: Mbarivision.C  trainbayes.C
aved-mbarivision/src/main/cpp/src/Data/: .MbariOpts.H.swp  Logger.C  Logger.H  MbariMetaData.C  MbariMetaData.H  MbariOpts.C  MbariOpts.H  Winner.C  Winner.H
aved-mbarivision/src/main/cpp/src/DetectionAndTracking/: BitObject.C  BitObject.H  BitObjectDrawModes.C  BitObjectDrawModes.H  ColorSpaceTypes.C  ColorSpaceTypes.H  DetectionParameters.C  DetectionParameters.H  FOEestimator.C  FOEestimator.H  Geometry2D.C  HoughTracker.C  HoughTracker.H  MbariFunctions.C  MbariFunctions.H  MbariImageCache.H  MbariVisualEvent.C  MbariVisualEvent.H  ObjectDetection.C  ObjectDetection.H  Preprocess.C  Preprocess.H  SaliencyTypes.C  SaliencyTypes.H  SegmentTypes.C  SegmentTypes.H  Segmentation.C  Segmentation.H  TrackingModes.C  TrackingModes.H
aved-mbarivision/src/main/cpp/src/DetectionAndTracking/houghtrack/: features.cpp  features.h  fern.cpp  fern.h  utilities.cpp  utilities.h
aved-mbarivision/src/main/cpp/src/DetectionAndTracking/segment/: Makefile  README  misc.h  segment  segment-graph.h  segment-image.h  segment.cpp  segment.ppm.REMOVED.git-id
aved-mbarivision/src/main/cpp/src/Image/: BitObject.C  BitObject.H  FilterOps.C  FilterOps.H  Geometry2D.C  Geometry2D.H  MbariImage.H  MbariImageCache.H
aved-mbarivision/src/main/cpp/src/Media/: MbariResultViewer.C  MbariResultViewer.H
aved-mbarivision/src/main/cpp/src/Motion/: MotionEnergy.C  MotionEnergy.H  MotionOps.C  MotionOps.H  OpticalFlow.C  OpticalFlow.H
aved-mbarivision/src/main/cpp/src/Utils/: ErrReporter.C  MbariXMLParser.C  MbariXMLParser.H  Version.C
aved-pmbarivision/: pom.xml
aved-pmbarivision/src/main/cpp/: Makefile.in  Pmbarivision.C  PvisionTCPmbari.C  cdeps.cc  configure  configure.ac
aved-pmbarivision/src/main/cpp/MessagePassing/: Mpidef.H  Mpimessage.C  Mpimessage.H
aved-pmbarivision/src/main/cpp/PipelineControl/: PipelineController.C  PipelineController.H
aved-pmbarivision/src/main/cpp/Stages/: CachePreprocessStage.C  CachePreprocessStage.H  GetSalientRegionsStage.C  GetSalientRegionsStage.H  SalientWinner.H  SegmentStage.C  SegmentStage.H  Stage.C  Stage.H  UpdateEventsStage.C  UpdateEventsStage.H
aved-pmbarivision/src/main/cpp/Test/: mpitest-bitobject.C  test-lowpass.C
aved-pmbarivision/src/main/cpp/Utils/: Const.H  Version.C  Version.H
aved-pmbarivision/src/main/cpp/src/: Pmbarivision.C  Pmbarivision.C.bak  PvisionTCPmbari.C  PvisionTCPmbari.C.bak
aved-pmbarivision/src/main/cpp/src/MessagePassing/: Mpidef.H  Mpimessage.C  Mpimessage.H
aved-pmbarivision/src/main/cpp/src/Neuro/: WinnerTakeAllStdMbari.C  WinnerTakeAllStdMbari.H  WinnerTakeAllStdOptimMbari.C  WinnerTakeAllStdOptimMbari.H
aved-pmbarivision/src/main/cpp/src/PipelineControl/: PipelineController.C
aved-pmbarivision/src/main/cpp/src/Stages/: CachePreprocessStage.C  CachePreprocessStage.H  GetSalientRegionsStage.C  GetSalientRegionsStage.H  SalientWinner.H  SegmentStage.C  SegmentStage.H  Stage.C  Stage.H  UpdateEventsStage.C  UpdateEventsStage.H
aved-pmbarivision/src/main/cpp/src/Test/: mpitest-bitobject.C  test-lowpass.tif  test-lowpass.tif.REMOVED.git-id
aved-pmbarivision/src/main/cpp/src/Utils/: Version.C  Version.H
aved-ui/: README  README.txt  build  f000000.ppm  nbactions-Linux.xml  nbactions-Linux32.xml  nbactions-Linux64.xml  nbactions-Mac.xml  nbactions-Mac32.xml  nbactions-Mac64.xml  nbactions.xml  pom.xml  project.properties  release.properties  version.properties
aved-ui/assembly/: assembly.xml  linux-assembly.xml  linux32-assembly.xml  linux64-assembly.xml  mac-assembly.xml  mac32-assembly.xml  (+1 more)
docker/: Docker.json  Dockerfile  Dockerfile.template  README.md  build.sh  delme  docker-compose.yml
(+689 files in other folders)
